# albumapp-django

./: .gitignore  LICENSE  README.rst  manage.py  pyproject.toml
albums/: album_views.py  models.py  report_views.py  urls.py  utils.py
albums/locale/en_US/LC_MESSAGES/: django.po
albums/static/: report_definition.json
albums/static/albums/css/: styles.css
albums/static/albums/css/iconfonts/: style.css
albums/static/albums/reportbro/: reportbro.css  reportbro.css.map  reportbro.js  reportbro.js.LICENSE.txt  reportbro.js.map  reportbro.min.js  reportbro.min.js.map
albums/templates/albums/: layout.html
albums/templates/albums/album/: edit.html  index.html
albums/templates/albums/report/: edit.html
django_demoapp/: settings.py  urls.py  wsgi.py
